k8s-specifications/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresdb-deployment
  labels:
    app: postgresdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
        - name: db
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb-storage
      volumes:
      - name: postgresdb-storage
        persistentVolumeClaim: 
          claimName: postgresdb-pv-claim
