k8s-specifications/restapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi-deployment
  labels:
    app: restapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restapi
  template: 
    metadata: 
      labels:
        app: restapi
    spec:
      containers:
      - name: restapi
        image: docker.io/library/restapi 
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
