k8s-specifications/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  # type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      nodePort: 30000
      port: 8080
      targetPort: 4200
