k8s-specifications/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgresdb
spec:
  selector:
    app: postgresdb
  type: NodePort
  ports:
    - protocol: TCP
      port: 5432
      # targetPort: 5432
      nodePort: 30001
      
# apiVersion: v1
# kind: Service
# metadata:
#   name: postgres-service
#   labels:
#   app: postgres
# spec:
#   type: NodePort
#   ports:
#   - port: 5432
#   nodePort: 30001
#   selector:
#   app: postgres
