k8s-specifications/restapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restapi-service
spec:
  type: ClusterIP 
  selector:
    app: restapi
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 8000
