k8s-specifications/survey-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: survey-ingress
  # namespace: resource-ingress
spec:
  rules:
  # specify the IP from hosts resulted by "kubectl get ingress -n survey-ingress --watch" 
  # save it with this domain name in /etc/hosts
  - host: surveyapp.com
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  # tls:
  # - host: 
  # - surveyapp.com
  # secretName: survey-secret-tls
