k8s-specifications/policy-namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: default
  name: deny-from-other-namesapaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
